# bolt-1

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  bolt  bolt.in  configure.ac
boltapp/: Makefile.am  application.py  window.py
data/: Makefile.am  about-dialog.ui  about-dialog.ui.in  bolt-menu.ui  bolt.gresource  bolt.gresource.xml
